--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.1",
+    "cloudscraper": "^1.5.0",
+    "immutable": "^3.8.2",
+    "jsonic": "^0.3.0",
+    "open-color": "^1.6.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-hot-loader": "^4.0.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.4.0",
+    "signalr-client": "0.0.17",
+    "styled-components": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
