--- a/package.json
+++ b/package.json
@@ -4,11 +4,46 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.1",
+    "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
     "cloudscraper": "^1.5.0",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
     "immutable": "^3.8.2",
+    "jest": "20.0.4",
     "jsonic": "^0.3.0",
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0",
+    "lodash": "^4.17.10",
+    "object-assign": "4.1.1",
     "open-color": "^1.6.3",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "query-string": "^6.1.0",
+    "raf": "3.4.0",
     "react": "^16.3.2",
+    "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.3.1",
     "react-redux": "^5.0.7",
@@ -16,8 +51,18 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
+    "redux-pender": "^1.2.1",
+    "resolve": "1.6.0",
     "signalr-client": "0.0.17",
-    "styled-components": "^3.3.2"
+    "style-loader": "0.19.0",
+    "styled-components": "^3.3.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
+    "validator": "^10.3.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
