--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "chalk": "1.1.3",
     "cloudscraper": "^1.5.0",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "dotenv": "^6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
-    "eslint-config-standard": "3.0.0",
     "eslint-config-react-app": "^2.1.0",
+    "eslint-config-standard": "3.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -33,9 +33,11 @@
     "immutable": "^3.8.2",
     "jest": "20.0.4",
     "jsonic": "^0.3.0",
+    "jsonwebtoken": "^8.2.2",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
+    "mongoose": "^5.1.4",
     "object-assign": "4.1.1",
     "open-color": "^1.6.3",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -65,8 +67,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "NODE_PATH=src node scripts/start.js",
-    "build": "NODE_PATH=src node scripts/build.js",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
