--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_PATH=src/
 
-PORT=3000
-MONGO_URI=mongodb://<dbuser>:<dbpassword>@ds247830.mlab.com:47830/velopart
+PORT=4000
+MONGO_URI=mongodb://<JayPark>:<dnflsms23*>@ds247830.mlab.com:47830/velopart
 SECRET_KEY=MySecretKey1$1$234
 JWT_SECRET=HEURM_JSON_WEB_TOKEN_KEY_!@#$
