--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cloudscraper": "^1.5.0",
     "css-loader": "0.28.7",
     "dotenv": "^6.0.0",
-    "dotenv-expand": "4.2.0",
+    "dotenv-expand": "^4.2.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-config-standard": "3.0.0",
@@ -33,11 +33,11 @@
     "immutable": "^3.8.2",
     "jest": "20.0.4",
     "jsonic": "^0.3.0",
-    "jsonwebtoken": "^8.2.2",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
-    "mongoose": "^5.1.4",
+    "mongoose": "^5.1.5",
     "object-assign": "4.1.1",
     "open-color": "^1.6.3",
     "postcss-flexbugs-fixes": "3.2.0",
